# scutclient

./: CMakeLists.txt  CMakePresets.json  README.md  README.zh-CN.md
scripts/: scutclient-manager.bat  scutclient-manager.ps1  setup-startup-task.bat
src/: auth.c  auth.h  drcom.h  functions.c  functions.h  info.c  info.h  main.c  tracelog.c  tracelog.h
